Add Windows binary metadata and optimize release profile
Added detailed Windows resource metadata and manifest in build.rs to improve AV recognition and execution level specification. Updated Cargo.toml with release profile settings to optimize binary size and performance.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,11 @@ windows = { version = "0.52", features = [
 
 [build-dependencies]
 winres = "0.1"
+
+[profile.release]
+opt-level = "z"      # Optimize for size
+lto = true           # Enable Link Time Optimization
+codegen-units = 1    # Better optimization (slower compile, smaller binary)
+strip = true         # Strip symbols from binary
+panic = "abort"      # Smaller binary, no unwinding
+
